# xrcad

./: Cargo.toml
xrcad_app/: Cargo.toml
xrcad_app/android/: AndroidManifest.xml  readme.md
xrcad_app/src/: main.rs
xrcad_lib/: Cargo.toml  scratchpad.md
xrcad_lib/src/: color.rs  input.rs  interaction.rs  lib.rs  model.rs  render.rs  ui_font.rs  viewport.rs  workbench.rs
xrcad_lib/src/input/: eyetrack.rs  gamepad.rs  keyboard.rs  mouse.rs  sixdof_delta.rs  sixdof_pose.rs  stylus.rs  touchscreen.rs
xrcad_lib/src/interaction/: event.rs  state.rs
xrcad_lib/src/model/: body_properties.rs  brep.rs  brep_model.rs  composite_model.rs  form_model.rs  material.rs  plane_utils.rs  primitives.rs
xrcad_lib/src/model/brep/: geometry.rs  id.rs  topology.rs
xrcad_lib/src/model/brep/constraints/: length.rs
xrcad_lib/src/model/brep/geometry/: circle.rs  line.rs  point.rs  polygon.rs  rectangle.rs
xrcad_lib/src/model/brep/operations/: extrude.rs  split.rs  stitch.rs
xrcad_lib/src/model/brep/topology/: body.rs  edge.rs  edge_loop.rs  face.rs  plane.rs  plane_new.rs  shell.rs  vertex.rs
xrcad_lib/src/model/geometry/: mod.rs  plane.rs
xrcad_lib/src/model/primitives/: basic.rs  platonic.rs
xrcad_lib/src/render/: ghosting.rs  hilighting.rs  lighting.rs  materials.rs
xrcad_lib/src/viewport/: camera.rs  camera_control.rs
xrcad_lib/src/workbench/: helpers.rs
xrcad_lib/src/workbench/helpers/: coordinate_system.rs  marker.rs  origin.rs  plane.rs
xrcad_lib/src/workspace/: helpers.rs  workspace.rs
xrcad_lib/src/workspace/helpers/: axes.rs  grid.rs  plane.rs
(+2 files in other folders)
