[package]
name = "xrcad_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
nalgebra = { workspace = true }
xrcad_lib = { workspace = true }

[package.metadata.android]
manifest-path = "android/AndroidManifest.xml"    # or "android/AndroidManifest.xml" if that's where you put it
package = "com.example.xrcad"
build-target = "aarch64-linux-android"
min-sdk-version = 21
target-sdk-version = 33
# icon = "res/mipmap/ic_launcher.png"
# assets = ["assets"]
# res = ["res"]
