[package]
name = "xrcad_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "xrcad_lib"
# Do NOT set crate-type here globally, let targets override it.

# For Android targets, use cdylib
[target.'cfg(target_os = "android")'.lib]
crate-type = ["cdylib"]

# For Linux targets, use rlib (or just omit crate-type, as rlib is the default)
[target.'cfg(target_os = "linux")'.lib]
crate-type = ["rlib"]

[dependencies]
nalgebra = { workspace = true }
bevy = { workspace = true }
